<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/plant_age_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/btn_plant2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sbj_plant_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/sbj_info_animal"
        app:layout_constraintStart_toEndOf="@+id/plant_age_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/human_age_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:text="@string/btn_human"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plant_age_btn" />

    <Button
        android:id="@+id/sbj_human_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:text="@string/sbj_human_btn"
        app:layout_constraintStart_toEndOf="@+id/human_age_btn"
        app:layout_constraintTop_toTopOf="@+id/sbj_plant_btn" />

    <Button
        android:id="@+id/animal_age_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/btn_animal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/human_age_btn" />

    <Button
        android:id="@+id/sbj_animal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="109dp"
        android:text="@string/sbj_animal_btn"
        app:layout_constraintStart_toEndOf="@+id/animal_age_btn"
        app:layout_constraintTop_toTopOf="@+id/sbj_human_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>